# jmap-mcp-server

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt  run_tests.py
.github/workflows/: test.yml
jmap_mcp/: __init__.py  __main__.py  auth.py  config.py  jmap_client.py  logging_config.py  mcp_server.py
tests/: __init__.py  test_auth.py  test_config.py  test_env.example  test_jmap_client.py
